add: redux shared in mf

--- a/shell/index.html
+++ b/shell/index.html
@@ -1,14 +1,12 @@
 <html>
     <head>
+        <title>Microfrontend App</title>
         <script src="http://localhost:4001/main.bundle.js"></script>
         <script src="http://localhost:5001/main.bundle.js"></script>
     </head>
 
     <body>
-        <h1>Login App</h1>
-        <div id="counter"></div>
-        <hr />
-        <h1>Profile App</h1>
-        <div id="todo"></div>
+        <div id="login"></div>
+        <div id="profile"></div>
     </body>
 </html>
