add: global redux and dependencies

--- a/shell/index.html
+++ b/shell/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Microfrontend App</title>
+        <title>Main App</title>
         <script src="http://localhost:4001/main.bundle.js"></script>
         <script src="http://localhost:5001/main.bundle.js"></script>
     </head>
